--- a/doc_MISR_AGP.html
+++ b/doc_MISR_AGP.html
@@ -34,6 +34,7 @@
 <ul>
 <li><p>Error 100: One or more positional parameter(s) are missing.</p></li>
 <li><p>Error 110: Input argument <code>misr_path</code> is invalid.</p></li>
+<li><p>Error 199: Unrecognized computer: Update the function <code>set_root_dirs</code>.</p></li>
 <li><p>Error 210: An exception condition occurred in function <code>path2str.pro</code>.</p></li>
 <li><p>Error 400: No <span class="smallcaps">MISR</span> <span class="smallcaps">AGP</span> file has been found.</p></li>
 <li><p>Error 410: More than 1 <span class="smallcaps">MISR</span> <span class="smallcaps">AGP</span> file has been found.</p></li>
@@ -112,6 +113,7 @@ agp_fspec =
 <li><p>Error 110: The input positional parameter <code>misr_path</code> is invalid.</p></li>
 <li><p>Error 120: The input positional parameters <code>misr_block</code> is invalid.</p></li>
 <li><p>Error 130: The input positional parameters <code>resol</code> is invalid.</p></li>
+<li><p>Error 199: Unrecognized computer: Update the function <code>set_root_dirs</code>.</p></li>
 <li><p>Error 200: An exception condition occurred in <code>path2str.pro</code>.</p></li>
 <li><p>Error 210: An exception condition occurred in <code>block2str.pro</code>.</p></li>
 <li><p>Error 300: An exception condition occurred in the <span class="smallcaps">MISR</span> <span class="smallcaps">Toolkit</span> routine <code>MTK_SETREGION_BY_PATH_BLOCKRANGE</code>.</p></li>
@@ -145,7 +147,7 @@ agp_fspec =
 <ul>
 <li><p>2018&#8211;05&#8211;13: Version 0.9 &#8212; Initial release.</p></li>
 <li><p>2018&#8211;05&#8211;15: Version 1.0 &#8212; Initial public release.</p></li>
-<li><p>2018&#8211;05&#8211;17: Version 1.5 &#8212; Implement new coding standards.</p></li>
+<li><p>2018&#8211;05&#8211;18: Version 1.5 &#8212; Implement new coding standards.</p></li>
 </ul></li>
 </ul>
 <h2>map_agp_lc_blocks</h2>
@@ -187,6 +189,7 @@ agp_fspec =
 <li><p>Error 110: The input positional parameter <span class="smallcaps">MISR</span> <span class="smallcaps">Path</span> is invalid.</p></li>
 <li><p>Error 120: The input positional parameters <span class="smallcaps">MISR</span> <span class="smallcaps">Block1</span> is invalid.</p></li>
 <li><p>Error 130: The input positional parameters <span class="smallcaps">MISR</span> <span class="smallcaps">Block2</span> is invalid.</p></li>
+<li><p>Error 199: Unrecognized computer: Update the function <code>set_root_dirs</code>.</p></li>
 <li><p>Error 200: An exception condition occurred in <code>path2str.pro</code>.</p></li>
 <li><p>Error 210: An exception condition occurred in <code>block2str.pro</code>.</p></li>
 <li><p>Error 220: An exception condition occurred in <code>block2str.pro</code>.</p></li>
@@ -234,7 +237,7 @@ The map of AGP land cover has been saved in
 <li><p>2018&#8211;03&#8211;10: Version 1.0 &#8212; Initial public release.</p></li>
 <li><p>2018&#8211;04&#8211;08: Version 1.1 &#8212; Update this function to use <code>set_root_dirs.pro</code> instead of <code>set_misr_roots.pro</code>, and update the documentation.</p></li>
 <li><p>2018&#8211;05&#8211;12: Version 1.2 &#8212; Modify the names and standard locations of the output files.</p></li>
-<li><p>2018&#8211;05&#8211;16: Version 1.5 &#8212; Implement new coding standards.</p></li>
+<li><p>2018&#8211;05&#8211;18: Version 1.5 &#8212; Implement new coding standards.</p></li>
 </ul></li>
 </ul>
 </body>
