--- a/doc_MISR_AGP.html
+++ b/doc_MISR_AGP.html
@@ -82,8 +82,8 @@ agp_fspec =
 <li><p><code>landcover code 5:</code> Deep inland water, purple.</p></li>
 <li><p><code>landcover code 6:</code> Deep ocean, navy.</p></li>
 </ul>
-<p>The masks are generated at the original low spatial resolution (1100 m) of the <span class="smallcaps">MISR</span> <span class="smallcaps">AGP</span> file, and upscaled to the higher spatial resolution (275 m) if requested, usig the function <code>lr2hr.pro</code>.</p></li>
-<li><p><strong>Syntax:</strong> <code>rc = agp_lc_(misr_path, misr_block, resol, masks, $</code><br />
+<p>The masks are generated at the original low spatial resolution (1100 m) of the <span class="smallcaps">MISR</span> <span class="smallcaps">AGP</span> file, and upscaled to the higher spatial resolution (275 m) if requested, using the function <code>lr2hr.pro</code>.</p></li>
+<li><p><strong>Syntax:</strong> <code>rc = agp_lc_masks(misr_path, misr_block, resol, masks, $</code><br />
 <code>AGP_VERSION = agp_version, VERBOSE = verbose, MAPIT = mapit, $</code><br />
 <code>DEBUG = debug, EXCPT_COND = excpt_cond)</code></p></li>
 <li><p><strong>Positional parameters [Input/Output]:</strong></p>
