--- a/doc_MISR_AGP.html
+++ b/doc_MISR_AGP.html
@@ -91,7 +91,7 @@ agp_fspec =
 <li><p><code>misr_path {INT} [I]:</code> The specified <span class="smallcaps">MISR</span> <span class="smallcaps">Path</span> number.</p></li>
 <li><p><code>misr_block {INT} [I]:</code> The specified initial <span class="smallcaps">MISR</span> <span class="smallcaps">Block</span> number.</p></li>
 <li><p><code>resol {INT} [I]:</code> The required spatial resolution of the output mask: either 275 or 1100 (in m).</p></li>
-<li><p><code>masks INT array [O]:</code> The array of 7 binary masks.</p></li>
+<li><p><code>masks {INT array} [O]:</code> The array of 7 binary masks.</p></li>
 </ul></li>
 <li><p><strong>Keyword parameters [Input/Output]:</strong></p>
 <ul>
@@ -104,7 +104,7 @@ agp_fspec =
 <li><p><strong>Returned value type:</strong> <code>INTEGER</code>.</p></li>
 <li><p><strong>Outcome:</strong></p>
 <ul>
-<li><p>If no exception condition has been detected, this function returns <code>0</code>, and the output keyword parameter <code>excpt_cond</code> is set to a null string, if the optional input keyword parameter <code>DEBUG</code> is set and if the optional output keyword parameter <code>EXCPT_COND</code> is provided in the call. The array of binary masks is returned as output positional parameter; a log file is created and saved if the input keyword parameter <code>VERBOSE</code> is set, and maps of both masks are generated and saved if the input keyword parameter <code>MAPIT</code> is set in the call.</p></li>
+<li><p>If no exception condition has been detected, this function returns <code>0</code>, and the output keyword parameter <code>excpt_cond</code> is set to a null string, if the optional input keyword parameter <code>DEBUG</code> is set and if the optional output keyword parameter <code>EXCPT_COND</code> is provided in the call. The array of binary masks is returned as output positional parameter; a log file is created and saved if the input keyword parameter <code>VERBOSE</code> is set, and maps of these masks are generated and saved if the input keyword parameter <code>MAPIT</code> is set in the call.</p></li>
 <li><p>If an exception condition has been detected, this function returns a non-zero error code, and the output keyword parameter <code>excpt_cond</code> contains a message about the exception condition encountered, if the optional input keyword parameter <code>DEBUG</code> is set and if the optional output keyword parameter <code>EXCPT_COND</code> is provided in the call. The array of binary masks may not be defined, and any requested output file may be inexistent, incomplete or useless.</p></li>
 </ul></li>
 <li><p><strong>Exception conditions:</strong></p>
@@ -116,8 +116,10 @@ agp_fspec =
 <li><p>Error 199: Unrecognized computer: Update the function <code>set_root_dirs</code>.</p></li>
 <li><p>Error 200: An exception condition occurred in <code>path2str.pro</code>.</p></li>
 <li><p>Error 210: An exception condition occurred in <code>block2str.pro</code>.</p></li>
-<li><p>Error 300: An exception condition occurred in the <span class="smallcaps">MISR</span> <span class="smallcaps">Toolkit</span> routine <code>MTK_SETREGION_BY_PATH_BLOCKRANGE</code>.</p></li>
-<li><p>Error 310: An exception condition occurred in the <span class="smallcaps">MISR</span> <span class="smallcaps">Toolkit</span> routine <code>MTK_READDATA</code>.</p></li>
+<li><p>Error 300: An exception condition occurred in the <span class="smallcaps">MISR</span> <span class="smallcaps">Toolkit</span> routine<br />
+<code>MTK_SETREGION_BY_PATH_BLOCKRANGE</code>.</p></li>
+<li><p>Error 310: An exception condition occurred in the <span class="smallcaps">MISR</span> <span class="smallcaps">Toolkit</span> routine<br />
+<code>MTK_READDATA</code>.</p></li>
 <li><p>Error 320: An exception condition occurred in <code>lr2hr.pro</code>.</p></li>
 <li><p>Error 400: An exception condition occurred in <code>get_agp_file.pro</code>.</p></li>
 <li><p>Error 500: An exception condition occurred in <code>is_writable.pro</code>.</p></li>
@@ -138,7 +140,14 @@ agp_fspec =
 </ul></li>
 <li><p><strong>Remarks:</strong> None.</p></li>
 <li><p><strong>Examples:</strong></p>
-<pre><code>[Insert the command and its outcome]</code></pre></li>
+<pre><code>IDL&gt; misr_path = 168
+IDL&gt; misr_block = 111
+IDL&gt; resol = 1100
+IDL&gt; rc = make_agp_masks(misr_path, misr_block, $
+   resol, masks, /VERBOSE, /MAPIT, $
+   /DEBUG, EXCPT_COND = excpt_cond)
+IDL&gt; PRINT, &#39;rc = &#39; + strstr(rc) + &#39;, excpt_cond = &gt;&#39; + excpt_cond + &#39;&lt;&#39;
+rc = 0 and excpt_cond = &gt;&lt;</code></pre></li>
 <li><p><strong>References:</strong></p>
 <ul>
 <li><p>Mike Bull, Jason Matthews, Duncan McDonald, Alexander Menzies, Catherine Moroney, Kevin Mueller, Susan Paradise, Mike Smyth (2011) <em>MISR Data Products Specifications</em>, <strong>JPL D-13963</strong>, Revision S, Section 9.4, p. 210.</p></li>
